--- a/index.html
+++ b/index.html
@@ -1,27 +1,105 @@
 <!DOCTYPE html>
-
-<html> 
-
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Website Title</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: #f8f8f8;
+            color: #333;
+        }
 
-<title>XtremeMediaLive</title>
-<link rel="stylesheet" href="xmlive.css">
+        header {
+            background-color: #333;
+            padding: 1em;
+            text-align: right;
+        }
 
+        nav {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
 
-    
+        nav a {
+            text-decoration: none;
+            color: white;
+            margin: 0 10px;
+            transition: color 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #ddd;
+        }
+
+        section {
+            padding: 2em;
+        }
+
+        footer {
+            background-color: #333;
+            padding: 1em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }
+
+        footer a {
+            color: white;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            color: #ddd;
+        }
+    </style>
 </head>
-
 <body>
-    
+
+    <header>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About Us</a>
+            <a href="#work">Our Work</a>
+            <a href="#contact">Contact Us</a>
+        </nav>
+    </header>
+
+    <section id="home">
+        <h1>Welcome to Our Website</h1>
+        <!-- Add your content for the home section here -->
+    </section>
+
+    <section id="about">
+        <h2>About Us</h2>
+        <!-- Add your content for the About Us section here -->
+    </section>
+
+    <section id="work">
+        <h2>Our Work</h2>
+        <!-- Add your content for the Our Work section here -->
+    </section>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <!-- Add your content for the Contact Us section here -->
+    </section>
+
+    <footer>
+        <div>
+            Follow us on social media:
+            <a href="#" target="_blank">Facebook</a>
+            <a href="#" target="_blank">Twitter</a>
+            <a href="#" target="_blank">Instagram</a>
+        </div>
+    </footer>
+
 </body>
-
-<button class="sign">
-Site Under Construction: Coming Soon. 2023. 
-For immediate assistance please contact: xtrememedialive@gmail.com
-</button>
-
-
-
-
 </html>
