--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             box-sizing: border-box;
             background-color: #f8f8f8;
             color: #333;
+            line-height: 1.6;
         }
 
         header {
@@ -22,7 +23,7 @@
 
         nav {
             display: flex;
-            justify-content: space-around;
+            justify-content: flex-end;
             align-items: center;
         }
 
