--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         header {
             background-color: #333;
             padding: 1em;
-            text-align: right;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         nav {
             display: flex;
-            justify-content: flex-end;
             align-items: center;
         }
 
@@ -60,11 +61,20 @@
         footer a:hover {
             color: #ddd;
         }
+
+        /* Logo styles */
+        .logo {
+            max-width: 100px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
 
     <header>
+        <div>
+            <img src="your-logo.png" alt="Logo" class="logo">
+        </div>
         <nav>
             <a href="#home">Home</a>
             <a href="#about">About Us</a>
