--- a/index.html
+++ b/index.html
@@ -67,6 +67,22 @@
             max-width: 100px;
             height: auto;
         }
+
+        /* Video and Photo styles */
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%;
+            overflow: hidden;
+        }
+
+        .video-container iframe,
+        .photo-container img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
@@ -96,6 +112,16 @@
     <section id="work">
         <h2>Our Work</h2>
         <!-- Add your content for the Our Work section here -->
+
+        <!-- Video Section -->
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+        </div>
+
+        <!-- Photo Section -->
+        <div class="photo-container">
+            <img src="your-photo.jpg" alt="Your Photo">
+        </div>
     </section>
 
     <section id="contact">
