--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Photographer & Videographer</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -69,19 +69,24 @@
         }
 
         /* Video and Photo styles */
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%;
+        .media-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
+        .media-item {
+            flex: 0 0 48%;
+            margin-bottom: 20px;
             overflow: hidden;
         }
 
-        .video-container iframe,
-        .photo-container img {
-            position: absolute;
-            top: 0;
-            left: 0;
+        .media-item img,
+        .media-item iframe {
             width: 100%;
-            height: 100%;
+            height: auto;
+            border: 2px solid #ddd;
+            border-radius: 8px;
         }
     </style>
 </head>
@@ -93,9 +98,8 @@
         </div>
         <nav>
             <a href="#home">Home</a>
-            <a href="#about">About Us</a>
-            <a href="#work">Our Work</a>
-            <a href="#contact">Contact Us</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -104,29 +108,21 @@
         <!-- Add your content for the home section here -->
     </section>
 
-    <section id="about">
-        <h2>About Us</h2>
-        <!-- Add your content for the About Us section here -->
-    </section>
-
-    <section id="work">
-        <h2>Our Work</h2>
-        <!-- Add your content for the Our Work section here -->
-
+    <section id="portfolio">
+        <h2>Portfolio</h2>
         <!-- Video Section -->
-        <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=ILjEMbsVTqs" frameborder="0" allowfullscreen></iframe>
-        </div>
+        <div class="media-container">
+            <div class="media-item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <!-- Photo Section -->
-        <div class="photo-container">
-            <img src="your-photo.jpg" alt="Your Photo">
-        </div>
-    </section>
+            <!-- Photo Section -->
+            <div class="media-item">
+                <img src="your-photo.jpg" alt="Your Photo">
+            </div>
 
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <!-- Add your content for the Contact Us section here -->
+            <!-- Add more videos and photos as needed -->
+        </div>
     </section>
 
     <footer>
