--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </header>
 
     <section id="home">
-        <h1>Welcome to Our Website</h1>
+        <h1>Welcome to XtremeMediaLive</h1>
         <!-- Add your content for the home section here -->
     </section>
 
@@ -127,6 +127,7 @@
 
     <footer>
         <div>
+            <p> © 2023 XtremeMediaLive. </p>
             Follow us on social media:
             <a href="#" target="_blank">Facebook</a>
             <a href="#" target="_blank">Twitter</a>
