--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <footer>
         <div>
-            <p> © 2023 XtremeMediaLive. </p>
+            <p>  <p style="color:red;">© 2023 XtremeMediaLive.</p> </p>
             Follow us on social media:
             <a href="#" target="_blank">Facebook</a>
             <a href="#" target="_blank">Twitter</a>
