--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 
     <footer>
         <div>
-            <p>  <p style="color:red;">© 2023 XtremeMediaLive.</p> </p>
-            Follow us on social media:
+            <p>  <p style="color:gray;">© 2023 XtremeMediaLive.</p> </p>
+           <p style="color:gray;">Follow us on social media:</p> 
             <a href="#" target="_blank">Facebook</a>
             <a href="#" target="_blank">Twitter</a>
             <a href="#" target="_blank">Instagram</a>
