--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <footer>
         <div>
             <p>  <p style="color:gray;">© 2023 XtremeMediaLive.</p> </p>
-           <p style="color:gray;">Follow us on social media:</p> 
+           <style="color:gray;">Follow us on social media: >
             <a href="#" target="_blank">Facebook</a>
             <a href="#" target="_blank">Twitter</a>
             <a href="#" target="_blank">Instagram</a>
