--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
 
     <section id="home">
         <h1>Welcome to XtremeMediaLive</h1>
+        <img src="Morgan Maxwell (1).png" 
+     width="300" 
+     height="400" />
+        
         <!-- Add your content for the home section here -->
     </section>
 
