--- a/index.html
+++ b/index.html
@@ -94,7 +94,14 @@
 
     <header>
         <div>
-            <img src="your-logo.png" alt="Logo" class="logo">
+            
+
+ <img src="Morgan Maxwell (1).png" 
+     width="100" 
+     height="100" />
+
+
+            
         </div>
         <nav>
             <a href="#home">Home</a>
