--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <section id="home">
     
-        <img src="Morgan Maxwell (1).png" 
+        <img src=" picture here " 
      width="200" 
      height="200" />
         
