--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 
     <section id="home">
     
-        <img src=" picture here " 
-     width="200" 
-     height="200" />
+        <img src="pic2.jpeg" 
+     width="400" 
+     height="400" />
         
         <!-- Add your content for the home section here -->
     </section>
