--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
     
         <img src="pic2.jpeg" 
      width="400" 
-     height="200" />
+     height="300" />
         
         <!-- Add your content for the home section here -->
+
+        Embark on a visual journey with Xtreme Media Live, where creativity meets excellence. Elevate your brand's story through our dynamic media solutions, ranging from captivating videos that unfold narratives to stunning photography that captures moments in time. Our team of skilled professionals is dedicated to transforming ideas into impactful visual experiences. Whether you're looking to boost your online presence, tell a compelling story, or create eye-catching promotional material, we bring your vision to life. Join us in shaping the future of media innovation – where every frame tells a story, and every moment is an opportunity. Let your brand resonate with authenticity and allure; choose Xtreme Media Live for a media experience that transcends expectations.
     </section>
 
     <section id="portfolio">
