--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <img src="pic2.jpeg" 
      width="400" 
      height="300" /> 
-        <img src="pic3.jpeg ALIGN=”right" 
+        <img src="pic3.jpeg  
      width="400" 
      height="300" />
         
