--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
         <img src="pic2.jpeg" 
      width="400" 
      height="300" /> 
-        <img src="pic3.jpeg  
+       <img src="pic3.jpeg" 
      width="400" 
-     height="300" />
+     height="300" /> 
         
         <!-- Add your content for the home section here -->
 
