--- a/index.html
+++ b/index.html
@@ -88,6 +88,23 @@
             border: 2px solid #ddd;
             border-radius: 8px;
         }
+
+
+
+
+} 
+  
+    img { 
+      float: left; 
+      margin: 5px; 
+    } 
+  
+    p { 
+      text-align: justify; 
+      font-size: 25px; 
+    } 
+        
+        
     </style>
 </head>
 <body>
