--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         }
 
 
+<style>        
 body { 
       margin: 20px; 
       text-align: center; 
@@ -31,7 +32,7 @@ body {
       text-align: justify; 
       font-size: 15px; 
     } 
-
+</style>
 
 
         
