--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ body {
 
             <!-- Photo Section -->
             <div class="media-item">
-                <img src="your-photo.jpg" alt="Your Photo">
+                <img src="pic3.jpg" alt="Your Photo">
             </div>
 
             <!-- Add more videos and photos as needed -->
