--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body {
         <!-- Video Section -->
         <div class="media-container">
             <div class="media-item">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=oQsSePGoyjM" frameborder="0" allowfullscreen></iframe>
             </div>
 
             <!-- Photo Section -->
