--- a/index.html
+++ b/index.html
@@ -135,7 +135,13 @@
         <!-- Video Section -->
         <div class="media-container">
             <div class="media-item">
+
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/oQsSePGoyjM?si=_trSlEBAKLF0VBiL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+                
                 <iframe width="560" height="315" src="https://www.youtube.com/watch?v=oQsSePGoyjM" frameborder="0" allowfullscreen></iframe>
+           
             </div>
 
             <!-- Photo Section -->
