--- a/index.html
+++ b/index.html
@@ -137,11 +137,10 @@
             <div class="media-item">
 
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/oQsSePGoyjM?si=_trSlEBAKLF0VBiL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="415" src="https://www.youtube.com/embed/oQsSePGoyjM?si=_trSlEBAKLF0VBiL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                 
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=oQsSePGoyjM" frameborder="0" allowfullscreen></iframe>
-           
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/fAldB6npNXE?si=c8xuVaGuMYYLfsm3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
             <!-- Photo Section -->
