--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 
         .media-item {
             flex: 0 0 48%;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             overflow: hidden;
         }
 
         .media-item img,
         .media-item iframe {
             width: 100%;
-            height: auto;
+            height: 300;
             border: 2px solid #ddd;
             border-radius: 8px;
         }
