--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <footer>
         <div>
-            <p>  <p style="color:gray;">© 2023 XtremeMediaLive.</p> </p>
+          <p style="color:gray;">© 2023 XtremeMediaLive.</p> 
             <p style="color:gray;">Follow us on social media:
           
             <a href="#" target="_blank">Facebook</a>
