--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
     <footer>
         <div>
-          <p style="color:gray;">© 2023 XtremeMediaLive.</p> 
-            <p style="color:gray;">Follow us on social media:
+         
+            <p style="color:gray;">© 2023 XtremeMediaLive. Follow us on social media:
           
             <a href="#" target="_blank">Facebook</a>
             <a href="#" target="_blank">Twitter</a>
