--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         .media-item img,
         .media-item iframe {
             width: 100%;
-            height: 50;
+            height: auto;
             border: 2px solid #ddd;
             border-radius: 8px;
         }
