--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
             
             </div>
 
+
+<!-- Photo Section -->
+            <div class="media-item">
+               <center> <img src="pic3.jpeg" alt="Your Photo"> </center>
+            </div>
             
 
             <!-- Add more videos and photos as needed -->
