--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 
     <section id="home">
 
+        <!-- Photo Section -->
         <center>
-        <img src="pic2.jpeg" 
-     width="400" 
-     height="300" /> 
+
+            
      </center>
         
         <!-- Add your content for the home section here -->
