--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
 <!-- Photo Section -->
             <div class="media-item">
                <center> <img src="pic2.jpeg" alt="Your Photo"> </center>
+                 width="400" 
+     height="300" /> 
+                
             </div>
             
 
