--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
 
 
 <!-- Photo Section -->
-            <div class="media-item">
-               <center> <img src="pic2.jpeg" alt="Your Photo"> </center>
-                 width="400" 
+           <section id="home">
+  <center>
+        <img src="pic2.jpeg" 
+     width="400" 
      height="300" /> 
-                
-            </div>
+     </center>
             
 
             <!-- Add more videos and photos as needed -->
