--- a/index.html
+++ b/index.html
@@ -166,6 +166,14 @@
      width="600" 
      height="400" /> 
      </center>
+
+               <center>
+        <img src="pic4.jpeg" 
+     width="600" 
+     height="400" /> 
+     </center>
+
+               
             
 
             <!-- Add more videos and photos as needed -->
