--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         <p>Embark on a visual journey with <b>Xtreme Media Live</b>, where creativity meets excellence. Our passionate team of video editing virtuosos is dedicated to turning ordinary footage into extraordinary narratives. Whether it's a promotional video that demands attention or a personal project seeking a professional touch, we specialize in adding that magic touch that captivates audiences. Elevate your brand's story through our dynamic media solutions, ranging from captivating videos that unfold narratives to stunning photography that captures moments in time. 
             Our team of skilled professionals is dedicated to transforming ideas into impactful visual experiences. So Boost your online presence, tell a compelling story or create eye-catching promotional material, we bring your vision to life. 
-             <p>  Join us in shaping the future of media innovation – where every frame tells a story, and every moment is an opportunity. Let your brand resonate with authenticity and allure; an experience that transcends expectations.
+             <p>  Join us in shaping the future of media innovation – where every frame tells a story, and every moment is an opportunity. Let your brand resonate with authenticity and allure; media experience that transcends expectations.
                Please contact <i>xtrememedialive@gmail.com</i> for more information. 
         </p>
 
