--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
         <div class="media-container">
             <div class="media-item">
 
-
+<center>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/oQsSePGoyjM?si=_trSlEBAKLF0VBiL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+</center>
                 
                    </div>
 <p></p>
